--- a/mi-turno-app/Dockerfile.prod
+++ b/mi-turno-app/Dockerfile.prod
@@ -1,7 +1,6 @@
 # Etapa 1: Construcción del proyecto
 FROM node:16.20.2-alpine as build
 
-
 # Establecer el directorio de trabajo dentro del contenedor
 WORKDIR /usr/src/app
 
@@ -9,20 +8,21 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 
 # Instalar las dependencias del proyecto 
-RUN npm install
+RUN npm ci
 
 # Copiar el resto de los archivos de tu proyecto al contenedor
 COPY . .
 
-# Etapa 2: Crear la imagen final sin node_modules
-FROM node:16.20.2-alpine
+RUN npm run build
 
-WORKDIR /usr/src/app
-COPY --from=build /usr/src/app /usr/src/app
-RUN npm install --only=production
+
+# Etapa 2: Ejecución de la aplicación
+FROM nginx:1.21.3-alpine
+ADD ./config/default.conf /etc/nginx/conf.d/default.conf
+COPY --from=build /usr/src/app/build /var/www/app
 
 # Exponer el puerto en el que tu aplicación escuchará (ajusta según tu configuración)
-EXPOSE 8080
+EXPOSE 80
 
 # Comando para iniciar la aplicación
-CMD ["npm", "start"]
+CMD ["nginx", "-g", "daemon off;"]
