--- a/mi-turno-servidor/package.json
+++ b/mi-turno-servidor/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "nodemon dist/app.js",
+    "start": "node dist/app.js",
     "dev": "concurrently \"tsc --watch\" \"nodemon dist/app.js\""
   },
   "keywords": [],
@@ -23,7 +23,6 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemon": "^3.1.9",
     "socket.io": "^3.0.1",
     "uuid": "^11.1.0"
   }
