Conexión con la base de postgresql. Dockerizar

--- a/.env
+++ b/.env
@@ -7,6 +7,15 @@ SERVER_CONTAINER=mi_turno_servidor
 SERVER_CONTEXT=./mi-turno-servidor
 SERVER_DOCKERFILE=Dockerfile.prod
 
+# mi-turno base de datos
+POSTGRES_DB_NAME=db_miturno
+POSTGRES_USERNAME=miturno
+POSTGRES_PASSWORD=123
+
+# PGADMIN
+PGADMIN_PASSWORD=123
+PGADMIN_EMAIL=norio@google.com 
+
 # mi-turno-app
 FRONTEND_PORT=80
 FRONTEND_IMAGE=mi_turno_app
